--- a/Dictionary-App/package.json
+++ b/Dictionary-App/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
+    "express": "^4.16.4",
+    "hbs": "^4.0.1",
     "prompt-sync": "^4.2.0",
     "yargs": "^17.5.1"
   }
