--- a/Dictionary-App/package.json
+++ b/Dictionary-App/package.json
@@ -4,7 +4,7 @@
   "description": "This is a dictionary app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node web-server/src/app.js"
   },
   "author": "Veysel Oz",
   "license": "ISC",
